@@ -12,12 +12,19 @@ copyright_year   = 2025
 [Readme]
 
 [AutoPrereqs]
+skip = Win32::API
+skip = Crypt::SysRandom::XS
+[Prereqs / RuntimeRecommends]
+Crypt::SysRandom::XS = 0
 [MetaJSON]
 [GitHub::Meta]
 [Git::NextVersion]
 [MetaProvides::Package]
 
-[DistBuild]
+[OSPrereqs / MSWin32]
+Win32::API = 0
+
+[MakeMaker]
 
 [Test::Compile]
 [PodSyntaxTests]
